--- a/argocd/apps/frigate/manifests/config.yaml
+++ b/argocd/apps/frigate/manifests/config.yaml
@@ -8,7 +8,7 @@ ingress:
   enabled: true
   ingressClassName: nginx
   hosts:
-    - host: frigate.k8s.yanello.net
+    - host: frigate.yanello.net
       paths:
         - path: "/"
           portName: http
