--- a/argocd/apps/media-server/plex/ingress.yaml
+++ b/argocd/apps/media-server/plex/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: plex.k8s.yanello.net
+  - host: plex.yanello.net
     http:
       paths:
       - path: '/'
