tautulli on server2

--- a/argocd/apps/media-server/tautulli/deploy.yaml
+++ b/argocd/apps/media-server/tautulli/deploy.yaml
@@ -65,7 +65,7 @@ spec:
       volumes:
         - name: config
           hostPath:
-            /zpool/k8s/tautulli/config
+            path: /zpool/k8s/tautulli/config
           # persistentVolumeClaim:
           #   claimName: config
         # - name: plex-logs
