--- a/argocd/apps/frigate/manifests/config.yaml
+++ b/argocd/apps/frigate/manifests/config.yaml
@@ -31,6 +31,9 @@ gpu:
 resources:
   limits:
     nvidia.com/gpu: 1
+service:
+  type: LoadBalancer
+  loadBalancerIP: 10.10.8.3
 config: |
   mqtt:
     host: 192.168.1.4
