--- a/argocd/apps/ytdl/manifests/deploy.yaml
+++ b/argocd/apps/ytdl/manifests/deploy.yaml
@@ -132,6 +132,13 @@ spec:
       containers:
         - image: mongo:4.4.18
           name: ytdl-mongo-db
+          resources:
+            limits:
+              cpu: 100m
+              memory: 500Mi
+            requests:
+              cpu: 25m
+              memory: 200Mi
           volumeMounts:
             - mountPath: /data/db
               name: db
@@ -154,12 +161,6 @@ spec:
             periodSeconds: 15
             timeoutSeconds: 5
             failureThreshold: 3
-            limits:
-              cpu: 100m
-              memory: 500Mi
-            requests:
-              cpu: 25m
-              memory: 200Mi
       restartPolicy: Always
       volumes:
         - name: db
