--- a/argocd/apps/ytdl/manifests/deploy.yaml
+++ b/argocd/apps/ytdl/manifests/deploy.yaml
@@ -129,6 +129,14 @@ spec:
       labels:
         io.kompose.service: ytdl-mongo-db
     spec:
+      nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: kubernetes.io/hostname
+                    operator: NotIn
+                    values:
+                      - marcus-server
       containers:
         - image: mongo:4.4.18
           name: ytdl-mongo-db
