--- a/argocd/apps/media-server/plex/deploy.yaml
+++ b/argocd/apps/media-server/plex/deploy.yaml
@@ -29,6 +29,9 @@ spec:
         - name: config
           hostPath:
             path: /zpool/k8s/plex/config
+        - name: media
+          hostPath:
+            path: /data/media
       terminationGracePeriodSeconds: 120
       initContainers:
       containers:
@@ -55,3 +58,5 @@ spec:
               mountPath: /config
             - name: transcode
               mountPath: /transcode
+            - name: media
+              mountPath: /data/media
