--- a/argocd/apps/media-server/plex/deploy.yaml
+++ b/argocd/apps/media-server/plex/deploy.yaml
@@ -53,6 +53,12 @@ spec:
               value: all
             - name: NVIDIA_DRIVER_CAPABILITIES
               value: compute,video,utility
+            - name: PLEX_UID
+              value: "1000"
+            - name: PLEX_GID
+              value: "1000"
+            - name: ALLOWED_NETWORKS
+              value: "192.168.0.0/16,10.10.8.0/22"
           volumeMounts:
             - name: config
               mountPath: /config
