--- a/argocd/apps/nextcloud/secrets/nextcloud-secret.enc.yaml
+++ b/argocd/apps/nextcloud/secrets/nextcloud-secret.enc.yaml
@@ -8,6 +8,7 @@ stringData:
     mariadb-root-password: ENC[AES256_GCM,data:bwX2tVim64zaMSujZXkUlb/9zKnUxEJZJTNW8iiF2vGrpse8pkaqEYcyCJRjt6xglNdJUHlZBUpX1sW63/CScg==,iv:uI2THx1QrXHwVwgFesqHeoZrV0qSB7QakdEa76JtGRw=,tag:Be6hNITE2q1dmNexY8tU3Q==,type:str]
     mariadb-replication-password: ENC[AES256_GCM,data:RPvjxazFUjaNGfsaOlsBbq2t/z4V61okAqj+PJsYBIZqhEouHKzXfcWtUoxJqAZeFslCliZBPgwq80TCF9LGvA==,iv:96B+HsIzo4k64oNieP34XoH+6WJ5P5ZV2A+vL4WAXMU=,tag:u6lefd6EV0QL7JdBgnxvZQ==,type:str]
     mariadb-password: ENC[AES256_GCM,data:45uJaNg=,iv:cahVK0JoYOU6YMT7WBUD95WlMKmKp0yKlJadLfthMus=,tag:zOAGTUPRVn8W1Les7B2QIQ==,type:str]
+    db-username: ENC[AES256_GCM,data:Rh12i0+KXvQB,iv:C6Ipx4NVAMJEDKKcZOj0Xyo1iZR9HSMoS1+qxwdGxOE=,tag:yo5YPGbDtFf0J0YF4r0YLA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +24,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-02T15:00:25Z"
-    mac: ENC[AES256_GCM,data:gc5WGCV4q1uQLuH2w504PtjM9Xk7vC3iGZfkRw84bX+U6USYo8BJjkPfUO/EC7vmWd5tFwtuK45YNgAq8xcpjMH3efuPJ98LZgryG7thewbbuJA5Yx2sP0f2nZwMQBh/gYP270qTpBcSt3mB/S/2Vhrnc8c0GU1h7SOFEt3vwGY=,iv:sTU/lWfamZrZo0R7GPwpt0GXlNgjsBfSQlBlj1UgXH0=,tag:/PpGp59xbwW3eeJ3oVEdiw==,type:str]
+    lastmodified: "2025-02-03T22:19:15Z"
+    mac: ENC[AES256_GCM,data:1Nl83uJV1nTUYdpHC3NV7bx1ZqM/l3BUfAwtAurqupZn8Xye1WIziM5T3Dzy0IKzdDSHDocd4M3psxEKKMdXkwe0RzpS5gIDvCxHnw+GMEZvTR1nk7c4Ay9JPVqjmGG77gAR6JYSwlGwjxlgY/6J2lYpUaCM4yOBdVyeFgKgFZE=,iv:vaaYiMVi/bWvHc8U9ot8KAFmZ0LinmH2kw4JZ4T0+Vg=,tag:4/C425NTSxQKFmm98flYgw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
