--- a/argocd/apps/nextcloud/app.yaml
+++ b/argocd/apps/nextcloud/app.yaml
@@ -104,11 +104,11 @@ spec:
             storageClass: local-storage
             size: 100Gi
           livenessProbe:
-            enabled: false
+            enabled: true
           startupProbe:
-            enabled: false
+            enabled: true
           readinessProbe:
-            enabled: false
+            enabled: true
           affinity:
             nodeAffinity:
               requiredDuringSchedulingIgnoredDuringExecution:
