--- a/argocd/apps/frigate/manifests/config.yaml
+++ b/argocd/apps/frigate/manifests/config.yaml
@@ -11,17 +11,10 @@ ingress:
   annotations:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    # nginx.ingress.kubernetes.io/server-snippets: |
-    #       location / {
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header X-Forwarded-Host $http_host;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_set_header X-Forwarded-For $remote_addr;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header Connection "upgrade";
-    #         proxy_cache_bypass $http_upgrade;
-    #       }
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+       proxy_http_version 1.1;
+       proxy_set_header Upgrade "websocket";
+       proxy_set_header Connection "Upgrade";
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/secure-backends: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
