--- a/argocd/apps/frigate/manifests/config.yaml
+++ b/argocd/apps/frigate/manifests/config.yaml
@@ -11,6 +11,7 @@ ingress:
   annotations:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.org/websocket-services: "frigate"
   hosts:
     - host: frigate.yanello.net
       paths:
