--- a/argocd/apps/istio/resources/istio-gateway.yaml
+++ b/argocd/apps/istio/resources/istio-gateway.yaml
@@ -11,6 +11,6 @@ spec:
     - "*.istio.yanello.net"
     - istio.yanello.net
     port:
-      name: https
-      number: 443
-      protocol: HTTPS
+      name: http
+      number: 80
+      protocol: HTTP
