--- a/argocd/apps/media-server/radarr/deploy.yaml
+++ b/argocd/apps/media-server/radarr/deploy.yaml
@@ -79,9 +79,11 @@ spec:
           persistentVolumeClaim:
             claimName: config
         - name: media
-          nfs:
-            server: marcus-server.lan
+          hostPath:
             path: /data/media
+          # nfs:
+          #   server: marcus-server.lan
+          #   path: /data/media
 
         # - name: media
         #   nfs:
