--- a/argocd/apps/media-server/sonarr/deploy.yaml
+++ b/argocd/apps/media-server/sonarr/deploy.yaml
@@ -79,6 +79,8 @@ spec:
           persistentVolumeClaim:
             claimName: config
         - name: media
-          nfs:
-            server: marcus-server.lan
+          hostPath:
             path: /data/media
+          # nfs:
+          #   server: marcus-server.lan
+          #   path: /data/media
