--- a/argocd/apps/media-server/radarr/pvc.yaml
+++ b/argocd/apps/media-server/radarr/pvc.yaml
@@ -1,24 +1,24 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: config
-spec:
-  storageClassName: nfs-storage
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
-# ---
 # apiVersion: v1
 # kind: PersistentVolumeClaim
 # metadata:
-#   name: radarr-media
+#   name: config
 # spec:
-#   storageClassName: ""
+#   storageClassName: nfs-storage
 #   accessModes:
-#     - ReadWriteMany
+#     - ReadWriteOnce
 #   resources:
 #     requests:
-#       storage: 100Gi
-#   volumeName: media-pv
+#       storage: 100Mi
+# # ---
+# # apiVersion: v1
+# # kind: PersistentVolumeClaim
+# # metadata:
+# #   name: radarr-media
+# # spec:
+# #   storageClassName: ""
+# #   accessModes:
+# #     - ReadWriteMany
+# #   resources:
+# #     requests:
+# #       storage: 100Gi
+# #   volumeName: media-pv
