frigate healtch check perms

--- a/argocd/apps/frigate/manifests/health-check-patch.yaml
+++ b/argocd/apps/frigate/manifests/health-check-patch.yaml
@@ -34,5 +34,6 @@ spec:
           periodSeconds: 60
       volumes:
       - name: health-check-script
+        defaultMode: 0555
         configMap:
           name: frigate-health-check
