--- a/argocd/apps/ingress-nginx/app.yaml
+++ b/argocd/apps/ingress-nginx/app.yaml
@@ -18,7 +18,7 @@ spec:
       - CreateNamespace=true
   source:
     repoURL: https://kubernetes.github.io/ingress-nginx
-    targetRevision: "*"
+    targetRevision: "4.12.0"
     chart: ingress-nginx
     helm:
       releaseName: ingress-nginx
