--- a/argocd/apps/media-server/plex/deploy.yaml
+++ b/argocd/apps/media-server/plex/deploy.yaml
@@ -51,6 +51,8 @@ spec:
           resources:
             limits:
               nvidia.com/gpu: '1'
+              cpu: 4000m
+              memory: 8Gi
             requests:
               nvidia.com/gpu: '1'
           ports:
