--- a/argocd/apps/istio/app.yaml
+++ b/argocd/apps/istio/app.yaml
@@ -117,4 +117,7 @@ spec:
     targetRevision: "*"
     chart: kiali-server
     helm:
+      valuesObject:
+        auth:
+          strategy: anonymous
 ---
