ingress gateway selector

--- a/argocd/apps/istio/resources/istio-gateway.yaml
+++ b/argocd/apps/istio/resources/istio-gateway.yaml
@@ -4,7 +4,7 @@ metadata:
   name: http-gateway
 spec:
   selector:
-    istio: ingressgateway
+    istio: istio-ingressgateway
   servers:
   - hosts:
     - "*.istio.yanello.net"
